--- a/CloverPackage/package/po/nl.po
+++ b/CloverPackage/package/po/nl.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-13 22:16+0300\n"
+"POT-Creation-Date: 2019-09-05 20:35+0300\n"
 "PO-Revision-Date: 2019-07-14 12:37+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: \n"
@@ -75,8 +75,11 @@ msgstr "Clover v2"
 
 #. type: Content of: <html><body><p>
 #: Resources/templates/Description.html:19
-msgid "is open source based on different projects: Clover, rEFIt, XNU, VirtualBox."
-msgstr "is open source gebaseerd op verschillende projecten: Clover, rEFIt, XNU, VirtualBox."
+msgid ""
+"is open source based on different projects: Clover, rEFIt, XNU, VirtualBox."
+msgstr ""
+"is open source gebaseerd op verschillende projecten: Clover, rEFIt, XNU, "
+"VirtualBox."
 
 #. type: Content of: <html><body><p><span>
 #: Resources/templates/Description.html:20
@@ -100,18 +103,28 @@ msgstr "Opstarten in 10.xx macOS, Windows EFI en Linux EFI"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:28
-msgid "It's EFI bootloader provides RuntimeServices for OS that impossible for Legacy Bootloaders"
-msgstr "De EFI bootloader biedt RuntimeServices voor OS die onmogelijk zijn voor Legacy bootloaders"
+msgid ""
+"It's EFI bootloader provides RuntimeServices for OS that impossible for "
+"Legacy Bootloaders"
+msgstr ""
+"De EFI bootloader biedt RuntimeServices voor OS die onmogelijk zijn voor "
+"Legacy bootloaders"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:29
-msgid "mostly Clover do automatic detection of hardware and set all properties by default. But user can change them by config.plist"
-msgstr "Meestal doet Clover aan automatische detectie van hardware en stelt daarbij alle eigenschappen in. Maar de gebruiker kan deze wijzigen in config.plist."
+msgid ""
+"mostly Clover do automatic detection of hardware and set all properties by "
+"default. But user can change them by config.plist"
+msgstr ""
+"Meestal doet Clover aan automatische detectie van hardware en stelt daarbij "
+"alle eigenschappen in. Maar de gebruiker kan deze wijzigen in config.plist."
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:30
 msgid "with Clover you may restart into other OS from Startup Disk prefPane"
-msgstr "Met Clover kun je herstarten in een andere besturingssysteem via het Startup Disk voorkeurPaneel"
+msgstr ""
+"Met Clover kun je herstarten in een andere besturingssysteem via het Startup "
+"Disk voorkeurPaneel"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:31
@@ -131,7 +144,9 @@ msgstr "ACPI zal worden gecorrigeerd tot de 4.0 standaard."
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:34
 msgid "Custom DSDT will be loaded from booted partition or from EFI folder"
-msgstr "Een aangepaste DSDT zal worden geladen vanaf de boot partitie of van de EFI map"
+msgstr ""
+"Een aangepaste DSDT zal worden geladen vanaf de boot partitie of van de EFI "
+"map"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:35
@@ -145,8 +160,12 @@ msgstr "Aanpasbare RestartFix, sleep/wake correcties en PCIRootUID waarde"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:37
-msgid "Graphics Properties Injector for ATI, NVidia and Intel for wide range of supported cards. Also customizable."
-msgstr "Grafisch Eigenschappen Injector voor ATI, NVidia en Intel voor een breed scala van ondersteunde kaarten. Ook aanpasbaar."
+msgid ""
+"Graphics Properties Injector for ATI, NVidia and Intel for wide range of "
+"supported cards. Also customizable."
+msgstr ""
+"Grafisch Eigenschappen Injector voor ATI, NVidia en Intel voor een breed "
+"scala van ondersteunde kaarten. Ook aanpasbaar."
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:38
@@ -185,13 +204,18 @@ msgstr "Stel NVRAM variablen in voor andere doeleinden;"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:45
-msgid "default boot after timeout, customizable GUI , and saving screenshots from GUI typing F10"
-msgstr "Standaard boot time-out, aanpasbare GUI en het opslaan van screenshots vanaf de GUI d.m.v. de F10-toets"
+msgid ""
+"default boot after timeout, customizable GUI , and saving screenshots from "
+"GUI typing F10"
+msgstr ""
+"Standaard boot time-out, aanpasbare GUI en het opslaan van screenshots vanaf "
+"de GUI d.m.v. de F10-toets"
 
 #. type: Content of: <html><body><ul><li>
 #: Resources/templates/Description.html:46
 msgid "saving boot.log in OS and preboot.log from GUI by typing F2"
-msgstr "Opslaan van boot.log in OS en preboot.log vanaf de GUI d.m.v. de F2-toets"
+msgstr ""
+"Opslaan van boot.log in OS en preboot.log vanaf de GUI d.m.v. de F2-toets"
 
 #. type: Content of: <html><body><div><p>
 #: Resources/templates/Conclusion.html:22
@@ -851,9 +875,12 @@ msgstr "embedded"
 
 #. type: "embedded_description"
 #: Resources/templates/Localizable.strings:184
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "embedded theme from Blackosx,\n"
+#| "Install to /EFI/CLOVER/themes/embedded"
 msgid ""
-"embedded theme from Blackosx,\n"
+"embedded theme from Clovy,\n"
 "Install to /EFI/CLOVER/themes/embedded"
 msgstr ""
 "embedded thema door Blackosx,\n"
@@ -883,9 +910,12 @@ msgstr "Cesium"
 
 #. type: "cesium_description"
 #: Resources/templates/Localizable.strings:192
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "Vector theme from Slice,\n"
+#| "Install to /EFI/CLOVER/themes/cesium"
 msgid ""
-"Vector theme from Slice,\n"
+"Vector SVG theme from Slice,\n"
 "Install to /EFI/CLOVER/themes/cesium"
 msgstr ""
 "Originele metaal thema van Slice,\n"
@@ -1403,4 +1433,6 @@ msgstr "Onbekend"
 #~ msgstr "USB 3.0 stuurprogramma, 32bit"
 
 #~ msgid "Alternate driver (v2) to fix Memory problems on UEFI firmware."
-#~ msgstr "Alternate driver (v2) to fix Memory problems on UEFI firmware. Do not use with other AptioFix together."
+#~ msgstr ""
+#~ "Alternate driver (v2) to fix Memory problems on UEFI firmware. Do not use "
+#~ "with other AptioFix together."
