--- a/CloverPackage/package/po/uk_UA.po
+++ b/CloverPackage/package/po/uk_UA.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Clover 2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-18 20:56+0300\n"
+"POT-Creation-Date: 2019-09-05 20:35+0300\n"
 "PO-Revision-Date: 2018-10-02 11:47+0200\n"
 "Last-Translator: vector sigma\n"
 "Language-Team: ua <ua@li.org>\n"
-"Language: ua\n"
+"Language: uk_UA\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
