--- a/CloverApp/Lang.bundle/Contents/Resources/ru.strings
+++ b/CloverApp/Lang.bundle/Contents/Resources/ru.strings
@@ -128,7 +128,7 @@ boot0ss (boot0 Signature Scanning) ищет первый раздел типа E
 "BIOS/HID" = "BIOS, Драйвера устройств ввода";
 
 "UEFI/FileVault2" = "UEFI, Драйверы для FileVault 2 UEFI-загрузки";
-"BIOS/FileVault2" = "BIOS, Драйверы для FileVault 2 UEFI-загрузки";
+"BIOS/FileVault2" = "BIOS, Драйверы для FileVault 2 BIOS-загрузки";
 
 "UEFI/MemoryFix" = "UEFI, Драйвера исправляющие ошибки выделения памяти";
 
@@ -155,7 +155,7 @@ boot0ss (boot0 Signature Scanning) ищет первый раздел типа E
 
 "FirmwareVolume.efi" = "Поддержка протокола FirmwareVolume для FileVault 2.";
 
-"FSInject.efi" = "Поддержка загрузки расширений ядра из папок, расположенных внутри папки EFI.";
+"FSInject.efi" = "Поддержка загрузки расширений ядра из папок, расположенных вне папки EFI.";
 
 "GrubEXFAT.efi" = "Поддержка файловой системы ExFAT.";
 
@@ -179,11 +179,11 @@ boot0ss (boot0 Signature Scanning) ищет первый раздел типа E
 "DataHubDxe.efi" = "Поддержка протокола DataHub, который строго необходим для запуска macOS. Обычно он присутствует (если нет, на экран будет выведено сообщение).";
 
 "EmuVariableUefi.efi" = "Драйвер для поддержки переменных NVRAM, необходимых macOS.
-Современные системы обычно имеют встроенный NVRAM. Используйте драйвер если вы уверены, что встроенный NVRAM отсутствует или не работает. Либо встроенный, либо эмулируемый NVRAM строго необходимы для системы.";
+Современные системы обычно имеют встроенный NVRAM. Используйте этот драйвер, если вы уверены, что встроенный NVRAM отсутствует или не работает. Либо встроенный, либо эмулируемый NVRAM строго необходимы для системы.";
 
 "EnglishDxe.efi" = "Поддержка протокола UnicodeCollation, необходимого для EFI Shell, если он отсутствует в UEFI BIOS, например H61, H67";
 
-"Fat.efi" = "Поддержка файловой системы FAT32.";
+"Fat.efi" = "Поддержка файловой системы FAT32, более корректный, чем поставляемый в некоторых UEFI BIOS";
 
 "HashServiceFix.efi" = "Функционал хеширования для тех UEFI-систем, где он отсутствует";
 
@@ -280,47 +280,47 @@ boot0ss (boot0 Signature Scanning) ищет первый раздел типа E
 "Start Speaking" = "Начать";
 "Stop Speaking" = "Остановить";
 // View
-"View" = "View";
-"Show Toolbar" = "Show Toolbar";
-"Customize Toolbar…" = "Customize Toolbar…";
-"Show Sidebar" = "Show Sidebar";
+"View" = "Вид";
+"Show Toolbar" = "Показать панель инструментов";
+"Customize Toolbar…" = "Настрока панели…";
+"Show Sidebar" = "Показать боковую панель";
 // Window
-"Window" = "Window";
+"Window" = "Окно";
 "Minimize" = "Убрать в Dock";
 "Zoom" = "Изменить масштаб";
 "Bring Clover Window to Front" = "<null>";
 "Bring All to Front" = "Все окна — на передний план";
 // Help
-"Clover Help" = "Clover Help";
+"Clover Help" = "Помощь по Clover";
 
 // Plist Editor document
-"Search" = "Search";
-"Replace" = "Replace";
-"All" = "All";
-"Item" = "Item";
-"Items" = "Items";
-"Untiteled" = "Untiteled";
-"New Item" = "New Item";
-"bytes" = "bytes";
-"typing" = "typing";
-"change type" = "change type";
-"change bool value" = "change bool value";
-"replace duplicate key" = "replace duplicate key";
-"move item" = "move item";
-"paste Item" = "paste Item";
-"remove Item" = "remove Item";
-"cut Item" = "cut Item";
+"Search" = "Поиск";
+"Replace" = "Замена";
+"All" = "Все";
+"Item" = "Элемент";
+"Items" = "Элементы";
+"Untiteled" = "Без названия";
+"New Item" = "Новый элемент";
+"bytes" = "байты";
+"typing" = "ввод";
+"change type" = "сменить тип";
+"change bool value" = "сменить логическое значение";
+"replace duplicate key" = "заменить дубликат";
+"move item" = "переместить";
+"paste Item" = "вставить";
+"remove Item" = "заменить";
+"cut Item" = "вырезать";
 "add new Item" = "add new Item";
-"No data" = "No data";
-"missing '<' at the beginning" = "missing '<' at the beginning";
-"missing '>' at the end" = "missing '>' at the end";
-"Your data contains illegal characters" = "Your data contains illegal characters";
-"bytes count is odd, must be even" = "bytes count is odd, must be even";
-"Keep editing" = "Keep editing";
-"Duplicate key in the Dictionary!" = "Duplicate key in the Dictionary!";
-"'%@' is already present in the Dictionary. Do you want to undo the editing or replace the existing key?" = "'%@' is already present in the Dictionary. Do you want to undo the editing or replace the existing key?";
-"Invalid value detected!" = "Invalid value detected!";
-"Your edit is not valid. Do you want to restore last valid value or keep editing?" = "Your edit is not valid. Do you want to restore last valid value or keep editing?";
+"No data" = "Нет данных";
+"missing '<' at the beginning" = "отсутствует '<' в начале";
+"missing '>' at the end" = "отсутствует '>' в конце";
+"Your data contains illegal characters" = "Данные содержат недопустиый символ";
+"bytes count is odd, must be even" = "нечтное число байтове";
+"Keep editing" = "Продолжить";
+"Duplicate key in the Dictionary!" = "Дубликат ключа в словаре!";
+"'%@' is already present in the Dictionary. Do you want to undo the editing or replace the existing key?" = "'%@' уже присутствует в словаре. Отменить редактирование или заменить существующий ключ?";
+"Invalid value detected!" = "Неверное значение!";
+"Your edit is not valid. Do you want to restore last valid value or keep editing?" = "Ваша правка неверна. Восстановить предыдущее значение или продолжить правку?";
 
 // Plist Editor header
 "Key" = "Key";
