--- a/CloverPackage/package/po/fr.po
+++ b/CloverPackage/package/po/fr.po
@@ -328,11 +328,11 @@ msgstr "Installe boot0af dans le MBR"
 msgid ""
 "Used for BIOS booting on BIOS motherboards.\n"
 "boot0af (boot0 Active First) bootloader try to boot the active partition defined in MBR. If there is no active partition, it will try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature.\n"
-"This choice will setup selected HFS/Fat32 partition to be active."
+"This choice will setup selected HFS/Fat32 partition to be active. WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Nécessaire pour démarrer depuis le BIOS des anciennes cartes-mère (Legacy).\n"
 "boot0af (boot0 Active First) Clover essaie de démarrer la partition active définie dans le MBR. S’il n’y a pas de partition active, il va essayé de démarrer la première partition EFI/FAT32/HFS (définie dans le MBR puis dans la GPT) ayant une signature PBR valide.\n"
-"Ce choix va activer la partition HFS/FAT32 sélectionnée."
+"Ce choix va activer la partition HFS/FAT32 sélectionnée. AVERTISSEMENT sur macOS Catalina et macOS Big Sur, le système est un système de fichiers en lecture seule, vous ne pouvez pas utiliser cette option sans sélectionner l'option ESP, sinon l'installation échouera, pour tout système plus ancien, il n'y a pas de problème."
 
 #. type: "boot0ss_title"
 #: Resources/templates/Localizable.strings:40
@@ -347,12 +347,13 @@ msgid ""
 "Used for BIOS booting on BIOS motherboards.\n"
 "boot0ss (boot0 Signature Scanning) bootloader try to boot the first EFI/FAT32/HFS partition (defined in the MBR and then the GPT) with a valid PBR signature. If no partition is found it will try to boot the active partition defined in MBR.\n"
 "This bootloader is a good choice when you have Windows installed on the same disk because Windows wants to have its partition active.\n"
-"This choice will not activate any partition in MBR."
+"This choice will not activate any partition in MBR. WARNING On macOS Catalina and macOS Big Sur the system is a read-only file system, you cannot use this option without selecting the ESP option otherwise the installation will fail, for any older system there is no problem."
 msgstr ""
 "Nécessaire pour démarrer depuis le BIOS des anciennes cartes-mère (Legacy).\n"
 "boot0ss (boot0 Signature Scanning) Clover va d’abord essayé de démarrer la première partition EFI/FAT32/HFS (définie dans le MBR puis dans la GPT) ayant une signature PBR valide. Si aucune partition n’a été trouvée, il va essayé de démarrer la partition active définie dans le MBR.\n"
 "Ce bootloader est un bon choix quand vous avez Windows installé sur le même disque car Windows nécessite que sa partition soit active.\n"
-"Ce choix ne va activer aucune partition dans le MBR."
+"Ce choix ne va activer aucune partition dans le MBR. AVERTISSEMENT sur macOS Catalina et macOS Big Sur, le système est un système de fichiers en lecture seule, vous ne pouvez pas utiliser cette option sans sélectionner l'option ESP, sinon l'installation échouera, pour tout système plus ancien, il n'y a pas de problème."
+
 
 #. type: "bootNo_title"
 #: Resources/templates/Localizable.strings:46
